# cnu_library_management

./: CMakeLists.txt  README.md  make_libman.bat
binary/: book.db  bookattr.ini  bookdata.txt  config.ini
binary/conds/: test.cond
binary/languages/: 1.ini  2.ini  3.ini  4.ini
binary/licenses/: LICENSE_LIBCURL.txt  LICENSE_OPENSSL.txt  LICENSE_SQLITE.txt
include/: AlgorithmUtil.h  BookAttr.h  ConfigUtil.h  CoreLibrary.h  CoreNetwork.h  CoreProgram.h  CoreSecure.h  CoreUI.h  I18N.h  NewStd.h
include/sqlite3-secure/: codec.h
source/: AlgorithmUtil.c  BookAttr.c  ConfigUtil.c  CoreLibrary.c  CoreNetwork.c  CoreProgram.c  CoreSecure.c  CoreUI.c  I18N.c  Main.c  cnuw_LibMan.vcxproj  cnuw_LibMan.vcxproj.filters  libcurl.lib  ssleay32.lib
